# CatMADS_prototype

./: .gitignore  CMakeLists.txt  README.md
CatMADS/: CMakeLists.txt  CatMADS.cpp  run_problems.py
CatMADS/MyExtendedPoll/: MyExtendedPollMethod2.cpp  MyExtendedPollMethod2.hpp  MySimpleMads.cpp  MySimpleMads.hpp  MySimplePoll.cpp  MySimplePoll.hpp
CatMADS/problems/: CMakeLists.txt
CatMADS/problems/AckleyHard/: AckleyHard.cpp  CMakeLists.txt
CatMADS/problems/Beale_constrained/: Beale_constrained.cpp  CMakeLists.txt
CatMADS/problems/Branin/: Branin.cpp
CatMADS/problems/Bukin6/: CMakeLists.txt
CatMADS/problems/Bukin6_constrained/: CMakeLists.txt
CatMADS/problems/Dembo5_constrained/: Dembo5_constrained.cpp
CatMADS/problems/EDV2/: CMakeLists.txt  EDV2.cpp
CatMADS/problems/EDV2_constrained/: CMakeLists.txt  EDV2_constrained.cpp
CatMADS/problems/G09_constrained/: CMakeLists.txt  G09_constrained.cpp
CatMADS/problems/GoldsteinPrice2/: CMakeLists.txt
CatMADS/problems/GoldsteinPrice_constrained/: CMakeLists.txt  GoldsteinPrice_constrained.cpp
CatMADS/problems/HS144_constrained/: CMakeLists.txt
CatMADS/problems/HS78/: HS78.cpp
CatMADS/problems/Himmelblau_constrained/: CMakeLists.txt
CatMADS/problems/PressureVessel_constrained/: CMakeLists.txt
CatMADS/problems/Rastragin/: CMakeLists.txt  Rastragin.cpp
CatMADS/problems/ReinforcedConcreteBeam_constrained/: CMakeLists.txt  ReinforcedConcreteBeam_constrained.cpp
CatMADS/problems/RosenSuzuki/: CMakeLists.txt
CatMADS/problems/RosenbrockMixed/: CMakeLists.txt
CatMADS/problems/Rosenbrock_constrained/: CMakeLists.txt
CatMADS/problems/StyblinskiTang/: CMakeLists.txt  StyblinskiTang.cpp
CatMADS/problems/StyblinskiTang_constrained/: CMakeLists.txt  StyblinskiTang_constrained.cpp
CatMADS/problems/Toy1/: CMakeLists.txt  Toy1.cpp
CatMADS/problems/Toy2/: CMakeLists.txt  Toy2.cpp
CatMADS/problems/Toy_constrained/: CMakeLists.txt  Toy_constrained.cpp
CatMADS/problems/Wong1/: CMakeLists.txt  Wong1.cpp
CatMADS/problems/Wong2_constrained/: CMakeLists.txt  Wong2_constrained.cpp
CatMADS/problems/Zakharov/: CMakeLists.txt  Zakharov.cpp
CatMADS/problems/constrained/: CMakeLists.txt
CatMADS/problems/constrained/Beale_constrained/: Beale_constrained.cpp  CMakeLists.txt
CatMADS/problems/constrained/Branin_constrained/: Branin_constrained.cpp  CMakeLists.txt
CatMADS/problems/constrained/Bukin6_constrained/: Bukin6_constrained.cpp
CatMADS/problems/constrained/CarSideImpact_constrained/: CMakeLists.txt  CarSideImpact_constrained.cpp
CatMADS/problems/constrained/Dembo5_constrained/: CMakeLists.txt  Dembo5_constrained.cpp
CatMADS/problems/constrained/Dembo7_constrained/: CMakeLists.txt  Dembo7_constrained.cpp
CatMADS/problems/constrained/EDV2_constrained/: CMakeLists.txt  EDV2_constrained.cpp
CatMADS/problems/constrained/G06_constrained/: CMakeLists.txt  G06_constrained.cpp
CatMADS/problems/constrained/G07_constrained/: CMakeLists.txt  G07_constrained.cpp
CatMADS/problems/constrained/G09_constrained/: G09_constrained.cpp
CatMADS/problems/constrained/GoldsteinPrice_constrained/: CMakeLists.txt  GoldsteinPrice_constrained.cpp
CatMADS/problems/constrained/HS144_constrained/: CMakeLists.txt  HS144_constrained.cpp
CatMADS/problems/constrained/Himmelblau_constrained/: CMakeLists.txt  Himmelblau_constrained.cpp
CatMADS/problems/constrained/Ishigami_constrained/: CMakeLists.txt  Ishigami_constrained.cpp
CatMADS/problems/constrained/MAD_constrained/: CMakeLists.txt  MAD_constrained.cpp
CatMADS/problems/constrained/McCormick_constrained/: CMakeLists.txt  McCormick_constrained.cpp
CatMADS/problems/constrained/Pentagon_constrained/: CMakeLists.txt  Pentagon_constrained.cpp
CatMADS/problems/constrained/PressureVessel_constrained/: PressureVessel_constrained.cpp
CatMADS/problems/constrained/ReinforcedConcreteBeam_constrained/: CMakeLists.txt  ReinforcedConcreteBeam_constrained.cpp
CatMADS/problems/constrained/Rosenbrock_constrained/: CMakeLists.txt  Rosenbrock_constrained.cpp
CatMADS/problems/constrained/Shekel_constrained/: CMakeLists.txt  Shekel_constrained.cpp
CatMADS/problems/constrained/SpeedReducer_constrained/: CMakeLists.txt  SpeedReducer_constrained.cpp
CatMADS/problems/constrained/Spring_constrained/: CMakeLists.txt  Spring_constrained.cpp
CatMADS/problems/constrained/StyblinskiTang_constrained/: CMakeLists.txt  StyblinskiTang_constrained.cpp
CatMADS/problems/constrained/Three_bar_truss_constrained/: CMakeLists.txt  Three_bar_truss_constrained.cpp
CatMADS/problems/constrained/Three_humps_constrained/: CMakeLists.txt  Three_humps_constrained.cpp
CatMADS/problems/constrained/Toy_constrained/: Toy_constrained.cpp
CatMADS/problems/constrained/Welded_beam_constrained/: CMakeLists.txt  Welded_beam_constrained.cpp
CatMADS/problems/constrained/Wong2_constrained/: CMakeLists.txt  Wong2_constrained.cpp
CatMADS/problems/constrained/Wong3_constrained/: CMakeLists.txt  Wong3_constrained.cpp
CatMADS/problems/unconstrained/: CMakeLists.txt
CatMADS/problems/unconstrained/AckleyHard/: AckleyHard.cpp  CMakeLists.txt
CatMADS/problems/unconstrained/Beale/: Beale.cpp  CMakeLists.txt
CatMADS/problems/unconstrained/Branin/: Branin.cpp  CMakeLists.txt
CatMADS/problems/unconstrained/Bukin6/: Bukin6.cpp  CMakeLists.txt
CatMADS/problems/unconstrained/Camel/: CMakeLists.txt  Camel.cpp
CatMADS/problems/unconstrained/EVD2/: CMakeLists.txt  EVD2.cpp
CatMADS/problems/unconstrained/EVD61/: CMakeLists.txt  EVD61.cpp
CatMADS/problems/unconstrained/Gamma/: CMakeLists.txt  Gamma.cpp
CatMADS/problems/unconstrained/GoldsteinPrice1/: CMakeLists.txt  GoldsteinPrice1.cpp
CatMADS/python_scripts/: IDW_model.py  Porifera_cat_distance.py  cat_neighbors.py  setup_and_utils.py  simple_cat_distance.py
CatMADS_built_on_NOMAD/CatMADS/: CMakeLists.txt  CatMADS.cpp  CatMADS.hpp
CatMADS_built_on_NOMAD/CatMADS/MyExtendedPoll/: MyExtendedPollMethod2.cpp  SimpleEvalPoint.hpp
Porifera/: CMakeLists.txt  Porifera.cpp  solid-fractions-all-l25.txt  solid-fractions-all-l25_old.txt
(+1847 files in other folders)
