# Add problems directories
add_subdirectory(AckleyHard)
add_subdirectory(Beale)
add_subdirectory(Branin)
add_subdirectory(Bukin6)
add_subdirectory(EDV2)
add_subdirectory(GoldsteinPrice1)
add_subdirectory(GoldsteinPrice2)
add_subdirectory(HS78)
add_subdirectory(Rastragin)
add_subdirectory(RosenbrockMixed)
add_subdirectory(RosenSuzuki)
add_subdirectory(StyblinskiTang)
add_subdirectory(Toy1)
add_subdirectory(Toy2)
add_subdirectory(Wong1)
add_subdirectory(Zakharov)
