# Add problems directories
add_subdirectory(AckleyHard)
add_subdirectory(Beale)
add_subdirectory(Branin)
add_subdirectory(Bukin6)
add_subdirectory(EVD2)
add_subdirectory(GoldsteinPrice1)
add_subdirectory(GoldsteinPrice2)
add_subdirectory(HS78)
add_subdirectory(Rastragin)
add_subdirectory(RosenbrockMixed)
add_subdirectory(RosenSuzuki)
add_subdirectory(StyblinskiTang)
add_subdirectory(Toy1)
add_subdirectory(Toy2)
add_subdirectory(Wong1)
add_subdirectory(Zakharov)
# Second batch of problems
add_subdirectory(Camel)
add_subdirectory(EVD61)
add_subdirectory(Gamma)
add_subdirectory(Hal04)
add_subdirectory(Hartmann)
add_subdirectory(Ishigami)
add_subdirectory(KowalikOsborne)
add_subdirectory(Levy)
add_subdirectory(McCormick)
add_subdirectory(OET5)
add_subdirectory(Roustant)
add_subdirectory(Shekel)
add_subdirectory(ThreeHump)
add_subdirectory(Wong3)
